CUDA code now chunks the FO surface. Results agree with CPP version within floating pt precision, except for a few nans ? Not sure what is causing the nans yet?

--- a/src/cpp/GNUmakefile
+++ b/src/cpp/GNUmakefile
@@ -16,7 +16,7 @@ CC = g++ #Linux
 #CC = pgc++
 #CC = nvcc
 #CFLAGS= -O3 -Wall -march=native
-CFLAGS= -fopenmp -march=native
+CFLAGS= -fopenmp #-march=native
 #CFLAGS= -acc -fast -Minfo -ta=nvidia,time
 #CFLAGS= -acc -fast -ta=tesla:managed #uses unified memory - simplifies copying of dynamic arrays host <-> device
 
