--- a/src/cpp/GNUmakefile
+++ b/src/cpp/GNUmakefile
@@ -11,12 +11,13 @@
 ##
 
 #CC := $(shell ../../crank/configure_compiler_C++.sh)
-CC = g++ #Linux
+#CC = g++ #Linux
 #CC = g++-7 #Mac OSX high sierra
 #CC = pgc++
 #CC = nvcc
 #CFLAGS= -O3 -Wall -march=native
-CFLAGS= -fopenmp #-march=native
+CC = g++
+#CFLAGS= -fopenmp #-march=native
 #CFLAGS= -acc -fast -Minfo -ta=nvidia,time
 #CFLAGS= -acc -fast -ta=tesla:managed #uses unified memory - simplifies copying of dynamic arrays host <-> device
 
