gpu kernel for vah pl matching now works and matches cpu results. Also added openmp flag in cpp Makefile. Check with sameed about optimization of cpp code.

--- a/src/cpp/GNUmakefile
+++ b/src/cpp/GNUmakefile
@@ -17,7 +17,7 @@
 #CC = nvcc
 #CFLAGS= -O3 -Wall -march=native
 CC = g++
-#CFLAGS= -fopenmp #-march=native
+CFLAGS= -fopenmp #-march=native
 #CFLAGS= -acc -fast -Minfo -ta=nvidia,time
 #CFLAGS= -acc -fast -ta=tesla:managed #uses unified memory - simplifies copying of dynamic arrays host <-> device
 
