starting to migrate all resonance decay code into /src/ , cleaning up, defining classes etc...

--- a/src/cpp/GNUmakefile
+++ b/src/cpp/GNUmakefile
@@ -11,13 +11,10 @@
 ##
 
 #CC := $(shell ../../crank/configure_compiler_C++.sh)
-#CC = g++ #Linux
 #CC = g++-7 #Mac OSX high sierra
 #CC = pgc++
-#CC = nvcc
-#CFLAGS= -O3 -Wall -march=native
 CC = g++
-CFLAGS= -fopenmp #-march=native
+CFLAGS= -fopenmp -march=native -O3
 #CFLAGS= -acc -fast -Minfo -ta=nvidia,time
 #CFLAGS= -acc -fast -ta=tesla:managed #uses unified memory - simplifies copying of dynamic arrays host <-> device
 
