beginnings of sampling routine implemented. seg fault?

--- a/src/cpp/GNUmakefile
+++ b/src/cpp/GNUmakefile
@@ -14,7 +14,7 @@
 #CC = g++-7 #Mac OSX high sierra
 #CC = pgc++
 CC = g++
-CFLAGS= -fopenmp -march=native -O3
+CFLAGS= -std=c++11 -fopenmp -march=native -O3 -lgsl -lgslcblas -lm
 #CFLAGS= -acc -fast -Minfo -ta=nvidia,time
 #CFLAGS= -acc -fast -ta=tesla:managed #uses unified memory - simplifies copying of dynamic arrays host <-> device
 
@@ -29,8 +29,8 @@ ifeq "$(MAIN)" ""
 MAIN		=	iS3D.e
 endif
 
-SRC   =	main.cpp arsenal.cpp emissionfunction.cpp Table.cpp readindata.cpp ParameterReader.cpp deltafReader.cpp
-INC   = main.h arsenal.h emissionfunction.h Table.h readindata.h Stopwatch.h ParameterReader.h deltafReader.h
+SRC   =	main.cpp arsenal.cpp emissionfunction.cpp Table.cpp readindata.cpp ParameterReader.cpp deltafReader.cpp gaussThermal.cpp
+INC   = main.h arsenal.h emissionfunction.h Table.h readindata.h Stopwatch.h ParameterReader.h deltafReader.h gaussThermal.h
 
 
 # -------------------------------------------------
@@ -79,7 +79,8 @@ install:	$(TARGET)
 # --------------- Dependencies -------------------
 ./main.cpp: main.h Table.h readindata.h emissionfunction.h arsenal.h ParameterReader.h
 ./arsenal.cpp: arsenal.h
-./emissionfunction.cpp: main.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h
+./emissionfunction.cpp: main.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h
 ./Table.cpp: Table.h arsenal.h
 ./readindata.cpp: main.h readindata.h arsenal.h Table.h ParameterReader.h
 ./ParameterReader.cpp: arsenal.h ParameterReader.h
+./gaussThermal.cpp: gaussThermal.h
