changed readindata.cpp to accept new compact freezeout format from cpu-vh

--- a/src/cpp/GNUmakefile
+++ b/src/cpp/GNUmakefile
@@ -13,11 +13,10 @@
 #choose a compiler.
 #CC = pgc++ # pgi compiler for openacc support
 CC = g++
-#CC = icpc # intel compiler tends to perform much better than gcc
+#CC = icpc # icpc slower than g++ for sampler? (10/16/18)
 
 #choose flags corresponding to compiler
-CFLAGS= -std=c++11 -O3 -lgsl -lgslcblas -lm # for g++
-#CFLAGS= -std=c++11 -march=native -O3 -lgsl -lgslcblas # for icpc
+CFLAGS= -std=c++11 -O3 -fopenmp -lgsl -lgslcblas -lm # for g++
 #CFLAGS= -std=c++11 -qopenmp -O3 -lgsl -lgslcblas # for icpc
 #CFLAGS= -acc -fast -Minfo -ta=nvidia,time # for pgi
 #CFLAGS= -acc -fast -ta=tesla:managed # for pgi, also uses unified memory
