--- a/src/cpp/GNUmakefile
+++ b/src/cpp/GNUmakefile
@@ -32,8 +32,8 @@ ifeq "$(MAIN)" ""
 MAIN		=	iS3D.e
 endif
 
-SRC   =	RuniS3DWrapper.cpp iS3DWrapper.cpp arsenal.cpp emissionfunction.cpp emissionfunction_smooth_kernels.cpp emissionfunction_sampling_kernels.cpp emissionfunction_polzn_kernels.cpp Table.cpp readindata.cpp ParameterReader.cpp deltafReader.cpp gaussThermal.cpp viscous_correction.cpp emissionfunction_resonance_decays.cpp
-INC   = iS3DWrapper.h arsenal.h emissionfunction.h Table.h readindata.h Stopwatch.h ParameterReader.h deltafReader.h gaussThermal.h viscous_correction.h
+SRC   =	RuniS3D.cpp iS3D.cpp arsenal.cpp emissionfunction.cpp emissionfunction_smooth_kernels.cpp emissionfunction_sampling_kernels.cpp emissionfunction_polzn_kernels.cpp Table.cpp readindata.cpp ParameterReader.cpp deltafReader.cpp gaussThermal.cpp viscous_correction.cpp emissionfunction_resonance_decays.cpp
+INC   = iS3D.h arsenal.h emissionfunction.h Table.h readindata.h Stopwatch.h ParameterReader.h deltafReader.h gaussThermal.h viscous_correction.h
 
 
 # -------------------------------------------------
@@ -80,15 +80,15 @@ install:	$(TARGET)
 		cp $(TARGET) $(INSTPATH)
 
 # --------------- Dependencies -------------------
-./RuniS3DWrapper.cpp: iS3DWrapper.h
-./iS3DWrapper.cpp: iS3DWrapper.h Table.h readindata.h emissionfunction.h arsenal.h ParameterReader.h
+./RuniS3D.cpp: iS3D.h
+./iS3D.cpp: iS3D.h Table.h readindata.h emissionfunction.h arsenal.h ParameterReader.h
 ./arsenal.cpp: arsenal.h
-./emissionfunction.cpp: iS3DWrapper.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h
-./emissionfunction_smooth_kernels.cpp: iS3DWrapper.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h
-./emissionfunction_polzn_kernels.cpp: iS3DWrapper.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h
-./emissionfunction_sampling_kernels.cpp: iS3DWrapper.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h viscous_correction.h
+./emissionfunction.cpp: iS3D.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h
+./emissionfunction_smooth_kernels.cpp: iS3D.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h
+./emissionfunction_polzn_kernels.cpp: iS3D.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h
+./emissionfunction_sampling_kernels.cpp: iS3D.h readindata.h emissionfunction.h Stopwatch.h arsenal.h Table.h gaussThermal.h viscous_correction.h
 ./Table.cpp: Table.h arsenal.h
-./readindata.cpp: iS3DWrapper.h readindata.h arsenal.h Table.h ParameterReader.h
+./readindata.cpp: iS3D.h readindata.h arsenal.h Table.h ParameterReader.h
 ./ParameterReader.cpp: arsenal.h ParameterReader.h
 ./gaussThermal.cpp: gaussThermal.h
-./emissionfunction_resonance_decays.cpp: iS3DWrapper.h readindata.h emissionfunction.h Stopwatch.h arsenal.h ParameterReader.h
+./emissionfunction_resonance_decays.cpp: iS3D.h readindata.h emissionfunction.h Stopwatch.h arsenal.h ParameterReader.h
