Finished df generator, except there's a wierd dibaryon in smash

--- a/generate_delta_f_coefficients/df_vh_dimensionless/Makefile
+++ b/generate_delta_f_coefficients/df_vh_dimensionless/Makefile
@@ -15,10 +15,10 @@ CFLAGS := $(CFLAG) -Wno-comment
 
 # Library options
 ifeq ($(UNAME), Linux)
-LIBS := -lm -lgsl
+LIBS := -lm -lgsl -lconfig
 endif
 ifeq ($(UNAME), Darwin)
-LIBS := -lc++ -lm
+LIBS := -lc++ -lm -lconfig
 #LIBS := -lm -lgsl
 endif
 
