Removed config files / library

--- a/generate_delta_f_coefficients/df_vh_dimensionless/Makefile
+++ b/generate_delta_f_coefficients/df_vh_dimensionless/Makefile
@@ -15,10 +15,10 @@ CFLAGS := $(CFLAG) -Wno-comment
 
 # Library options
 ifeq ($(UNAME), Linux)
-LIBS := -lm -lgsl -lconfig
+LIBS := -lm -lgsl 
 endif
 ifeq ($(UNAME), Darwin)
-LIBS := -lc++ -lm -lconfig
+LIBS := -lc++ -lm 
 #LIBS := -lm -lgsl
 endif
 
