updated particle list and delta-f coeffs for new smash particles list

--- a/generate_delta_f_coefficients/smash_box/df_vh_dimensionless/Makefile
+++ b/generate_delta_f_coefficients/smash_box/df_vh_dimensionless/Makefile
@@ -9,7 +9,7 @@ DIR_OBJ = ./src
 CFLAGS= $(OPTIMIZATION) $(OPTIONS)
 
 # Compiler options
-COMPILER = g++
+COMPILER = icpc
 OPTIMIZATION = -O3
 CFLAGS := $(CFLAG) -Wno-comment
 
